# usb-hid-bler

./: .gitmodules  README.md  partition_table.csv  sdkconfig  sdkconfig.old
.github/: ble_hidd.c.replace
.github/workflows/: build.yml
components/hid_translater/: CMakeLists.txt
main/: CMakeLists.txt  ble_device.c  ble_device.h  blink.c  blink.h  board.h  bridge.c  bridge.h  esp_hid_device_main.c  esp_hid_gap.c  esp_hid_gap.h  macro.c  macro.h  main.c  manager.c  manager.h  peripherals.c  peripherals.h  report_map.c  report_map.h  storage.c  storage.h  usb_host.c  usb_host.h  usb_main.c  usb_main.h  usb_test.c  utils.c  utils.h
main/boards/: board_c3_hid1.h  board_common.h  board_hid_bler.h
